--- a/town-container-android/res/values/strings.xml
+++ b/town-container-android/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="empty"></string>
     <string name="about">ABOUT</string>
     <string name="change">CHANGE</string>
-    <string name="back">Back</string>    
+    <string name="back">Back</string>  
+    <string name="upload_photo">UPLOAD YOUR PHOTOS</string>    
 </resources>
