--- a/town-container-android/res/values/strings.xml
+++ b/town-container-android/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="about">ABOUT</string>
     <string name="change">CHANGE</string>
     <string name="back">Back</string>  
-    <string name="upload_photo">UPLOAD YOUR PHOTOS</string>    
+    <string name="upload_photo">UPLOAD YOUR PHOTOS</string>
+    <string name="coming_soon">Coming Soon!</string>
 </resources>
