--- a/town-container-android/res/values/strings.xml
+++ b/town-container-android/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="change">CHANGE</string>
     <string name="back">Back</string>  
     <string name="upload_photo">UPLOAD YOUR PHOTOS</string>
+    <string name="upload_photo_btn">Upload photos</string>
     <string name="coming_soon">Coming Soon!</string>
 </resources>
