--- a/town-container-android/res/values/strings.xml
+++ b/town-container-android/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="upload_photo">UPLOAD YOUR PHOTOS</string>
     <string name="upload_photo_btn">Upload photos</string>
     <string name="coming_soon">Coming Soon!</string>
+    <string name="cancel">Cancel</string>
+    <string name="upload">Upload</string>
+    <string name="write_a_caption">Write a caption</string>
 </resources>
