Working FB login.  Just the login, no UI with friends or locations yet

--- a/town-container-android/res/values/strings.xml
+++ b/town-container-android/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="applicationId">318928931561066</string>
     <string name="app_name">Town Wizard</string>
     <string name="enter_ZIP">Enter ZIP or name of town</string>
     <string name="update_your_status">Update your status</string>
