--- a/town-container-android/res/values/strings.xml
+++ b/town-container-android/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="enter_ZIP">Enter ZIP or name of town</string>
     <string name="update_your_status">Update your status</string>
     <string name="tag_friends">Tag friends</string>
-    <string name="search_for_friends">Search for friends</string>
+    <string name="search_for_friends">Search friends to tag</string>
     <string name="whoops">Whoops</string>
     <string name="partners_not_found">Sorry, but it looks like we don\'t have a TownWizard in your area yet!</string>
     <string name="upload_successful">Upload Successful!</string>
