--- a/town-container-android/doc/TODO.txt
+++ b/town-container-android/doc/TODO.txt
@@ -2,7 +2,6 @@ position tw logo background on categories screen correctly
 simulate go button and post button pressed state
 update partners file against the new apiv3
 center text on dialogs
-fix back button on facebook pages
-delete default json activity
 see if UI constants can be moved to strings.xml
 navigate to the places web page after checkin
+Hide soft keyboard on focuse out of the friend filter
