--- a/town-container-android/res/values/strings.xml
+++ b/town-container-android/res/values/strings.xml
@@ -13,11 +13,17 @@
     <string name="service_currently_unavaible">Service currently unavaible. Please try again later.</string>
     <string name="about">ABOUT</string>
     <string name="change">CHANGE</string>
-    <string name="back">Back</string>  
+    <string name="back">Back</string>
     <string name="upload_photo">UPLOAD YOUR PHOTOS</string>
     <string name="cancel">Cancel</string>
     <string name="upload">Upload</string>
     <string name="write_a_caption">Write a caption</string>
     <string name="whats_on_your_mind">What\'s on your mind?</string>
+    <string name="check_in">CHECK IN</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="cont">Continue</string>
+    <string name="checkin_confirm">Do you want to check in to</string>
+    <string name="checkin_success">You\'ve successfully checked in</string>
     <string name="empty"></string>
 </resources>
